<resources>
    <string name="app_name">Magic</string>
    <string name="loginText">Login to your account</string>
    <string name="emailField">Email</string>
    <string name="passwordField">Password</string>
    <string name="connectionButton">Connection</string>
    <string name="createAccountButton">Create an account</string>
    <string name="forgotPasswordButton">Forgot password</string>
    <string name="registrationText">Registration</string>
    <string name="signUpButton">Sign up</string>
    <string name="createAccountLink">Create an account</string>
    <string name="resetPasswordLink">Reset your password</string>
    <string name="searchMenu">Search</string>
    <string name="settingsMenu">Settings</string>
    <string name="signOutMenu">Sign out</string>
    <string name="refreshMenu">Refresh</string>
    <string name="alertMenu">Alert</string>
    <string name="resetPasswordLogo">Reset your password</string>
    <string name="resetButton">Reset</string>
    <string name="connectionLink">Connect to your account</string>
    <string name="usernameField">Username</string>
    <string name="linkOfTheDealField">Link of the deal</string>
    <string name="titleField">Title</string>
    <string name="usualPriceField">Usual price (Kč)</string>
    <string name="priceField">Price (Kč)</string>
    <string name="shippingCostField">Shipping cost (Kč)</string>
    <string name="currency">Kč</string>
    <string name="discountCodeField">Discount code</string>
    <string name="selectCategoriesField">Select categories</string>
    <string name="startingDateField">Starting date</string>
    <string name="endingDateField">Ending date</string>
    <string name="descriptionField">Description</string>
    <string name="categoryPrompt">Select a category</string>
    <string name="notAGoodDeal">I don\'t think it\'s such a good deal :/</string>
    <string-array name="categoriesArrays">
        <item>Accessories &amp; gadgets</item>
        <item>Application &amp; software</item>
        <item>Car / Motorcycle / Vehicle</item>
        <item>Clothes</item>
        <item>Culture &amp; entertainment</item>
        <item>Discount code</item>
        <item>Food</item>
        <item>Free</item>
        <item>Health &amp; cosmetics</item>
        <item>High tech</item>
        <item>Home &amp; garden</item>
        <item>Kids</item>
        <item>Pets</item>
        <item>Service</item>
        <item>Sport</item>
        <item>Travel</item>
        <item>Other</item>
    </string-array>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="passwordVerification">Password verification</string>
    <string name="saveField">Save</string>
    <string name="title_of_the_deal">Title of the deal</string>
    <string name="categories">Categories</string>
    <string name="price">0,00€</string>
    <string name="score">0</string>
    <string name="date">10/12/2018</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="czech_currency">Kč</string>
</resources>
