<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ResetPasswordActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/logoResetPassword"
                android:layout_width="338dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:text="@string/resetPasswordLogo"
                android:textColor="@color/greyTextColor"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/emailResetPassword"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="204dp"
                android:autofillHints=""
                android:backgroundTint="@color/greyTextColor"
                android:ems="10"
                android:hint="@string/emailField"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/greyTextColor"
                android:textColorHint="@color/greyTextColor"
                app:layout_constraintStart_toStartOf="@+id/logoResetPassword"
                app:layout_constraintTop_toBottomOf="@+id/logoResetPassword" />

            <Button
                android:id="@+id/resetButtonResetPassword"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/resetButton"
                android:textColor="@color/greyTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.496"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailResetPassword" />

            <TextView
                android:id="@+id/connectionLink"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="80dp"
                android:layout_marginEnd="8dp"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/connectionLink"
                android:textColor="@color/greyTextColor"
                android:textColorLink="@android:color/holo_blue_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resetButtonResetPassword" />

            <TextView
                android:id="@+id/createAccountLink"
                android:layout_width="wrap_content"
                android:layout_height="23dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:autoLink="web"
                android:linksClickable="true"
                android:text="@string/createAccountLink"
                android:textColor="@color/greyTextColor"
                android:textColorLink="@android:color/holo_blue_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/connectionLink" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>