<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/logoLogin"
                android:layout_width="338dp"
                android:layout_height="35dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="8dp"
                android:text="@string/registrationText"
                android:textColor="@color/greyTextColor"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/email"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="204dp"
                android:autofillHints=""
                android:backgroundTint="@color/greyTextColor"
                android:ems="10"
                android:hint="@string/emailField"
                android:inputType="textEmailAddress"
                android:textAlignment="center"
                android:textColor="@color/greyTextColor"
                android:textColorHint="@color/greyTextColor"
                app:layout_constraintStart_toStartOf="@+id/logoLogin"
                app:layout_constraintTop_toBottomOf="@+id/logoLogin" />

            <EditText
                android:id="@+id/passwordRegistration"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:autofillHints=""
                android:backgroundTint="@color/greyTextColor"
                android:ems="10"
                android:hint="@string/passwordField"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColor="@color/greyTextColor"
                android:textColorHint="@color/greyTextColor"
                app:layout_constraintStart_toStartOf="@+id/email"
                app:layout_constraintTop_toBottomOf="@+id/email"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/signUpButtonRegistration"
                android:layout_width="256dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="532dp"
                android:layout_marginEnd="8dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/signUpButton"
                android:textColor="@color/greyTextColor"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.431"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>